feat: add Java 8 compatible transport
Add Java 8-compatible transport support for v0.1.1.