@@ -3,6 +3,9 @@ package io.github.xxvw.cloudflare.d1;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
@@ -13,13 +16,13 @@ class D1ResultTest {
   void resultCollectionsAreImmutableAndPreserveNullValues() {
     D1Result result = new D1Result(
         true,
-        List.of(new java.util.LinkedHashMap<>(Map.of("id", 1))),
+        Collections.singletonList(row("id", 1)),
         D1Meta.empty(),
-        List.of(new D1ResponseInfo(1, "message", null, null, Map.of())),
-        List.of(new D1ResponseInfo(2, "error", null, null, Map.of())),
+        Collections.singletonList(new D1ResponseInfo(1, "message", null, null, Collections.emptyMap())),
+        Collections.singletonList(new D1ResponseInfo(2, "error", null, null, Collections.emptyMap())),
         "{}");
 
-    assertThatThrownBy(() -> result.rows().add(Map.of())).isInstanceOf(UnsupportedOperationException.class);
+    assertThatThrownBy(() -> result.rows().add(Collections.emptyMap())).isInstanceOf(UnsupportedOperationException.class);
     assertThatThrownBy(() -> result.rows().get(0).put("name", "Taro"))
         .isInstanceOf(UnsupportedOperationException.class);
     assertThatThrownBy(() -> result.messages().add(null)).isInstanceOf(UnsupportedOperationException.class);
@@ -28,13 +31,13 @@ class D1ResultTest {
 
   @Test
   void rowHelpersExposeEmptyAndFirstRow() {
-    D1Result empty = new D1Result(true, List.of(), D1Meta.empty(), List.of(), List.of(), "{}");
+    D1Result empty = new D1Result(true, Collections.emptyList(), D1Meta.empty(), Collections.emptyList(), Collections.emptyList(), "{}");
     D1Result nonEmpty = new D1Result(
         true,
-        List.of(Map.of("id", 1), Map.of("id", 2)),
+        Arrays.asList(row("id", 1), row("id", 2)),
         D1Meta.empty(),
-        List.of(),
-        List.of(),
+        Collections.emptyList(),
+        Collections.emptyList(),
         "{}");
 
     assertThat(empty.isEmpty()).isTrue();
@@ -42,18 +45,24 @@ class D1ResultTest {
     assertThat(empty.firstRow()).isEmpty();
     assertThat(nonEmpty.isEmpty()).isFalse();
     assertThat(nonEmpty.rowCount()).isEqualTo(2);
-    assertThat(nonEmpty.firstRow()).contains(Map.of("id", 1));
+    assertThat(nonEmpty.firstRow()).contains(row("id", 1));
   }
 
   @Test
   void emptyMetaHasSafeDefaultsAndAdditionalPropertiesAreImmutable() {
     D1Meta meta = new D1Meta(
-        false, 0, null, 0, 0, 0.0, null, null, null, null, null, Map.of("unknown", "value"));
+        false, 0, null, 0, 0, 0.0, null, null, null, null, null, row("unknown", "value"));
 
     assertThat(D1Meta.empty().changedDb()).isFalse();
     assertThat(D1Meta.empty().lastRowId()).isEmpty();
     assertThat(meta.additionalProperties()).containsEntry("unknown", "value");
     assertThatThrownBy(() -> meta.additionalProperties().put("x", "y"))
         .isInstanceOf(UnsupportedOperationException.class);
+  }
+
+  private static Map<String, Object> row(String name, Object value) {
+    Map<String, Object> row = new LinkedHashMap<>();
+    row.put(name, value);
+    return row;
   }
 }
